--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "browserslist": "Chrome > 61",
   "scripts": {
     "build": "webpack -c webpack.config.js"
   },
@@ -12,6 +13,7 @@
   "devDependencies": {
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.1.0",
+    "lightningcss": "1.16.0",
     "mini-css-extract-plugin": "2.6.1",
     "terser-webpack-plugin": "5.3.6",
     "webpack": "5.74.0",
